Moved testing helpers to separate assembly, created separate assembly for integration tests, added some new methods to Simple class.

--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-BrowserDoctor.com is a site for assisting users with diagnosing and correcting problems with their browser.
-
-It also allows technical support personnel to quickly determine why users are not able to correctly use their web-based applications.
+OpenPGP.net is a .NET implementation of OpenPGP (RFC 4880) written in C#
